fix landing page sidebar on mobile render

--- a/assets/css/native/landing.css
+++ b/assets/css/native/landing.css
@@ -1,6 +1,5 @@
 /******** OVERRIDE NAVBAR STYLING FOR LANDING PAGE ONLY ********/
 .navbar {
-	position: absolute;
 	background: transparent;
 }
 
